--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@types/node": "^16.0.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "log4js": "^6.3.0"
   }
 }
