input: register, login, save info done

--- a/logconfig.json
+++ b/logconfig.json
@@ -20,6 +20,6 @@
     }
   },
   "categories": {
-    "default": { "appenders": ["app", "errors", "console"], "level": "DEBUG" }
+    "default": { "appenders": ["app", "errors", "console"], "level": "TRACE" }
   }
 }
