env variable and testing with jest

--- a/package.json
+++ b/package.json
@@ -7,16 +7,24 @@
     "start": "tsc & node ./build/index.js",
     "setup": "tsc & node ./build/setup/createTable.js",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "cov": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/node": "^16.0.0",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "aws-sdk": "^2.941.0",
+    "dotenv": "^10.0.0",
     "log4js": "^6.3.0"
   }
 }
